index.html and Hellow.html added

--- a/WebContent/Hellow.html
+++ b/WebContent/Hellow.html
@@ -5,10 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Hey Java World</h1>
+
+	<h1>Hellow Java Community</h1>
 	<br><br>
-	<form action="Hellow.html">
-		<input type="submit" value="SEND"/>
-	</form>
+	<h2>I wish you a happy and successful 2020</h2>
+
 </body>
 </html>
